--- a/Views/Main/Index.cshtml
+++ b/Views/Main/Index.cshtml
@@ -2,11 +2,29 @@
 <html>
     <head>
         <link rel="stylesheet" href="~/css/style.css"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <meta charset='utf-8'>
         <title>Hello!</title>
     </head>
     <body>
-        <h1>Hello ASP.NET Mvc!</h1>
-        <h3>@ViewBag.Example</h3>
+        <div class="navbar">
+            <h2>Home |</h2>
+            <h2><a href="/projects">Projects </a> |</h2>
+            <h2><a href="/contact">Contact</a></h2>
+        </div>
+        <h1>About Me</h1>
+        <div class="image">
+            <img src='~/img/odb.png'>
+            <h4>Ol' Dirty Bastard</h4>
+            <h4>I like stuff!</h4>
+        </div>
+        <div class="lorumipsum">
+            <p>
+                Yeah. Give a little credit to our public schools. You can see how I lived before I met you. Doomsday device? Ah, now the ball's in Farnsworth's court! Yes, I saw. You were doing well, until everyone died.
+                Fry! Quit doing the right thing, you jerk! Have you ever tried just turning off the TV, sitting down with your children, and hitting them? Shut up and get to the point! Pansy. I never loved you. With gusto.
+                You know, I was God once. And remember, don't do anything that affects anything, unless it turns out you were supposed to, in which case, for the love of God, don't not do it! Yeah, and if you were the pope they'd be all, "Straighten your pope hat." And "Put on your good vestments."
+                I had more, but you go ahead. I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money. Yeah. Give a little credit to our public schools.
+            </p>
+        </div>
     </body>
 </html>
