--- a/Views/Main/projects.cshtml
+++ b/Views/Main/projects.cshtml
@@ -19,12 +19,20 @@
                 <h5>Cool thing #1!</h5>
             </div>
             <div class="imagescroll">
-                <img src="~/img/car01.jpg">
-                <h5>Cool thing #1!</h5>
+                <img src="~/img/car02.jpg">
+                <h5>Cool thing #2!</h5>
             </div>
             <div class="imagescroll">
-                <img src="~/img/car01.jpg">
-                <h5>Cool thing #1!</h5>
+                <img src="~/img/car03.jpg">
+                <h5>Cool thing #3!</h5>
+            </div>
+            <div class="imagescroll">
+                <img src="~/img/car04.jpg">
+                <h5>Cool thing #4!</h5>
+            </div>
+            <div class="imagescroll">
+                <img src="~/img/car05.jpg">
+                <h5>Cool thing #5!</h5>
             </div>
         </div>
         <h3>@ViewBag.Example</h3>
