--- a/Views/Main/razor.cshtml
+++ b/Views/Main/razor.cshtml
@@ -21,9 +21,11 @@
                 "Kentucky"
             };
         
-        foreach(var item in StringList)
+        foreach(str item in StringList)
         {
-            <p>@item</p>
+            <div>
+                <p>@item</p>
+            </div>
         }
     }
     </body>
