--- a/Views/Main/razor.cshtml
+++ b/Views/Main/razor.cshtml
@@ -20,12 +20,11 @@
                 "Indiana",
                 "Kentucky"
             };
+        var char theBigC;
         
-        foreach(str item in StringList)
+        foreach(var item in StringList)
         {
-            <div>
-                <p>@item</p>
-            </div>
+            <p>@item</p>;
         }
     }
     </body>
